Fixes *Text vars from needing to be white

--- a/bootstrap/less/forms.less
+++ b/bootstrap/less/forms.less
@@ -483,7 +483,7 @@ select:focus:invalid {
   }
   .add-on:first-child,
   .btn:first-child {
-    // FYI, `.btn:first-child` accounts for a button group that's prepended
+    // FYI, .btn:first-child accounts for a button group thats prepended
     .border-radius(@inputBorderRadius 0 0 @inputBorderRadius);
   }
 }
