--- a/less/variables.less
+++ b/less/variables.less
@@ -236,28 +236,28 @@
 
 // Form states and alerts
 // -------------------------
-@warningText:             #fff;
 @warningBackground:       #2ba6cb;
+@warningText:             darken(#2ba6cb, 5%);
 @warningBorder:           darken(spin(@warningBackground, -10), 3%);
 
-@errorText:               #fff;
 @errorBackground:         #c60f13;
+@errorText:               darken(#c60f13, 5%);
 @errorBorder:             darken(spin(@errorBackground, -10), 3%);
 
-@successText:             #fff;
 @successBackground:       #6ec229;
+@successText:             darken(#6ec229, 5%);
 @successBorder:           darken(spin(@successBackground, -10), 5%);
 
-@infoText:                #fff;
 @infoBackground:          #c2c60c;
+@infoText:                darken(#c2c60c, 5%);
 @infoBorder:              darken(spin(@infoBackground, -10), 7%);
 
-@importantText:           #fff;
 @importantBackground:     #c2c60c;
+@importantText:           darken(#c2c60c, 5%);
 @importantBorder:         darken(spin(@importantBackground, -10), 7%);
 
-@inverseText:             #000;
 @inverseBackground:       #ccc;
+@inverseText:             #000;
 @inverseBorder:           darken(spin(@inverseBackground, -10), 7%);
 
 
