--- a/less/alerts.less
+++ b/less/alerts.less
@@ -6,3 +6,10 @@
 .alert {
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
 }
+
+.alert,
+.alert-success,
+.alert-error,
+.alert-info {
+	color: @white;
+}
