--- a/less/variables.less
+++ b/less/variables.less
@@ -241,19 +241,19 @@
 @warningBorder:           darken(spin(@warningBackground, -10), 3%);
 
 @errorBackground:         #c60f13;
-@errorText:               darken(#c60f13, 5%);
+@errorText:               darken(@errorBackground, 5%);
 @errorBorder:             darken(spin(@errorBackground, -10), 3%);
 
 @successBackground:       #6ec229;
-@successText:             darken(#6ec229, 5%);
+@successText:             darken(@successBackground, 5%);
 @successBorder:           darken(spin(@successBackground, -10), 5%);
 
 @infoBackground:          #c2c60c;
-@infoText:                darken(#c2c60c, 5%);
+@infoText:                darken(@infoBackground, 5%);
 @infoBorder:              darken(spin(@infoBackground, -10), 7%);
 
 @importantBackground:     #c2c60c;
-@importantText:           darken(#c2c60c, 5%);
+@importantText:           darken(@importantBackground, 5%);
 @importantBorder:         darken(spin(@importantBackground, -10), 7%);
 
 @inverseBackground:       #ccc;
