Fix labels, progress and navbar.

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -56,6 +56,7 @@
 .navbar-inverse .navbar-search .search-query {
 	color: #fff;
 	background-color: #333;
+	min-height: 30px;
 }
 
 .navbar-inverse .brand, .navbar-inverse .nav > li > a {
