--- a/less/labels.less
+++ b/less/labels.less
@@ -10,7 +10,7 @@
 .label,
 .badge {
 	background-color: #e9e9e9;
-	color: @white;
+	color: #505050;
 	text-shadow: 0 -1px 0 rgba(255, 255, 255, 0.5);
 	font-weight: normal;
 
