Add CSS triangle mixin, remove underline from anchors

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,7 +3,6 @@
 // --------------------------------------------------
 
 
-
 // CSS3 PROPERTIES
 // --------------------------------------------------
 
@@ -31,4 +30,39 @@
 
 .no-background-image {
 	background-image: none;
+}
+
+
+// Triangles
+// --------------------------------------------------
+
+.triangle-base() {
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+}
+.triangle(@direction, @size, @color) when (@direction = up) {
+    .triangle-base();
+    border-left: @size solid transparent;
+    border-right: @size solid transparent;
+    border-bottom: @size solid @color;
+}
+.triangle(@direction, @size, @color) when (@direction = down) {
+    .triangle-base();
+    border-left: @size solid transparent;
+    border-right: @size solid transparent;
+    border-top: @size solid @color;
+}
+.triangle(@direction, @size, @color) when (@direction = left) {
+    .triangle-base();
+    border-top: @size solid transparent;
+    border-bottom: @size solid transparent;
+    border-right: @size solid @color;
+}
+.triangle(@direction, @size, @color) when (@direction = right) {
+    .triangle-base();
+    border-top: @size solid transparent;
+    border-bottom: @size solid transparent;
+    border-left: @size solid @color;
 }
