--- a/less/type.less
+++ b/less/type.less
@@ -6,3 +6,8 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'Segoe UI', 'Ubuntu', sans-serif;
 	font-weight: 300;
 }
+
+//
+// Link Colors 
+//-----------------------------------------------------------------------------------
+a, a:hover { text-decoration: none; }
