Remove top margin from navbar btns. Add .required for labels. Update bootstrap.css for docs.

--- a/less/labels.less
+++ b/less/labels.less
@@ -134,3 +134,9 @@
 	&-inverse { color: @grayDark; border-color: @grayDark; }
 	&-inverse[href] { color: darken(@grayDark, 10%); border-color: darken(@grayDark, 10%); }
 }
+
+label.required:after {
+	content: ' *';
+	color: #3373A9;
+	font-weight: bold;
+}
