--- a/less/navbar.less
+++ b/less/navbar.less
@@ -17,6 +17,10 @@
 	padding-left: 0;
 	padding-right: 0;
 }
+.navbar .btn, .navbar .btn-group { 
+	margin-top: 0;
+}
+
 .navbar .nav > .active > a,
 .navbar .nav > .active > a:hover,
 .navbar .nav > .active > a:focus {
