--- a/docs/assets/css/bootstrap.css
+++ b/docs/assets/css/bootstrap.css
@@ -590,32 +590,32 @@ a.muted:focus {
   color: #808080;
 }
 .text-warning {
-  color: #ffffff;
+  color: #2795b6;
 }
 a.text-warning:hover,
 a.text-warning:focus {
-  color: #e6e6e6;
+  color: #1e728c;
 }
 .text-error {
-  color: #ffffff;
+  color: #ae0d11;
 }
 a.text-error:hover,
 a.text-error:focus {
-  color: #e6e6e6;
+  color: #7f0a0c;
 }
 .text-info {
-  color: #ffffff;
+  color: #aaae0b;
 }
 a.text-info:hover,
 a.text-info:focus {
-  color: #e6e6e6;
+  color: #7b7e08;
 }
 .text-success {
-  color: #ffffff;
+  color: #62ad25;
 }
 a.text-success:hover,
 a.text-success:focus {
-  color: #e6e6e6;
+  color: #4a831c;
 }
 .text-left {
   text-align: left;
@@ -1266,19 +1266,19 @@ input[type="checkbox"][readonly] {
 .control-group.warning .control-label,
 .control-group.warning .help-block,
 .control-group.warning .help-inline {
-  color: #ffffff;
+  color: #2795b6;
 }
 .control-group.warning .checkbox,
 .control-group.warning .radio,
 .control-group.warning input,
 .control-group.warning select,
 .control-group.warning textarea {
-  color: #ffffff;
+  color: #2795b6;
 }
 .control-group.warning input,
 .control-group.warning select,
 .control-group.warning textarea {
-  border-color: #ffffff;
+  border-color: #2795b6;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -1286,33 +1286,33 @@ input[type="checkbox"][readonly] {
 .control-group.warning input:focus,
 .control-group.warning select:focus,
 .control-group.warning textarea:focus {
-  border-color: #e6e6e6;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
+  border-color: #1e728c;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #64c2de;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #64c2de;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #64c2de;
 }
 .control-group.warning .input-prepend .add-on,
 .control-group.warning .input-append .add-on {
-  color: #ffffff;
+  color: #2795b6;
   background-color: #2ba6cb;
-  border-color: #ffffff;
+  border-color: #2795b6;
 }
 .control-group.error .control-label,
 .control-group.error .help-block,
 .control-group.error .help-inline {
-  color: #ffffff;
+  color: #ae0d11;
 }
 .control-group.error .checkbox,
 .control-group.error .radio,
 .control-group.error input,
 .control-group.error select,
 .control-group.error textarea {
-  color: #ffffff;
+  color: #ae0d11;
 }
 .control-group.error input,
 .control-group.error select,
 .control-group.error textarea {
-  border-color: #ffffff;
+  border-color: #ae0d11;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -1320,33 +1320,33 @@ input[type="checkbox"][readonly] {
 .control-group.error input:focus,
 .control-group.error select:focus,
 .control-group.error textarea:focus {
-  border-color: #e6e6e6;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
+  border-color: #7f0a0c;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ef3236;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ef3236;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ef3236;
 }
 .control-group.error .input-prepend .add-on,
 .control-group.error .input-append .add-on {
-  color: #ffffff;
+  color: #ae0d11;
   background-color: #c60f13;
-  border-color: #ffffff;
+  border-color: #ae0d11;
 }
 .control-group.success .control-label,
 .control-group.success .help-block,
 .control-group.success .help-inline {
-  color: #ffffff;
+  color: #62ad25;
 }
 .control-group.success .checkbox,
 .control-group.success .radio,
 .control-group.success input,
 .control-group.success select,
 .control-group.success textarea {
-  color: #ffffff;
+  color: #62ad25;
 }
 .control-group.success input,
 .control-group.success select,
 .control-group.success textarea {
-  border-color: #ffffff;
+  border-color: #62ad25;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -1354,33 +1354,33 @@ input[type="checkbox"][readonly] {
 .control-group.success input:focus,
 .control-group.success select:focus,
 .control-group.success textarea:focus {
-  border-color: #e6e6e6;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
+  border-color: #4a831c;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #95dc5b;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #95dc5b;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #95dc5b;
 }
 .control-group.success .input-prepend .add-on,
 .control-group.success .input-append .add-on {
-  color: #ffffff;
+  color: #62ad25;
   background-color: #6ec229;
-  border-color: #ffffff;
+  border-color: #62ad25;
 }
 .control-group.info .control-label,
 .control-group.info .help-block,
 .control-group.info .help-inline {
-  color: #ffffff;
+  color: #aaae0b;
 }
 .control-group.info .checkbox,
 .control-group.info .radio,
 .control-group.info input,
 .control-group.info select,
 .control-group.info textarea {
-  color: #ffffff;
+  color: #aaae0b;
 }
 .control-group.info input,
 .control-group.info select,
 .control-group.info textarea {
-  border-color: #ffffff;
+  border-color: #aaae0b;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -1388,16 +1388,16 @@ input[type="checkbox"][readonly] {
 .control-group.info input:focus,
 .control-group.info select:focus,
 .control-group.info textarea:focus {
-  border-color: #e6e6e6;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
+  border-color: #7b7e08;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #eef22c;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #eef22c;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #eef22c;
 }
 .control-group.info .input-prepend .add-on,
 .control-group.info .input-append .add-on {
-  color: #ffffff;
+  color: #aaae0b;
   background-color: #c2c60c;
-  border-color: #ffffff;
+  border-color: #aaae0b;
 }
 input:focus:invalid,
 textarea:focus:invalid,
@@ -3440,7 +3440,7 @@ input[type="submit"].btn.btn-mini {
 }
 .alert,
 .alert h4 {
-  color: #ffffff;
+  color: #2795b6;
 }
 .alert h4 {
   margin: 0;
@@ -3454,28 +3454,28 @@ input[type="submit"].btn.btn-mini {
 .alert-success {
   background-color: #6ec229;
   border-color: #79ad25;
-  color: #ffffff;
+  color: #62ad25;
 }
 .alert-success h4 {
-  color: #ffffff;
+  color: #62ad25;
 }
 .alert-danger,
 .alert-error {
   background-color: #c60f13;
   border-color: #b80e2e;
-  color: #ffffff;
+  color: #ae0d11;
 }
 .alert-danger h4,
 .alert-error h4 {
-  color: #ffffff;
+  color: #ae0d11;
 }
 .alert-info {
   background-color: #c2c60c;
   border-color: #a48e0a;
-  color: #ffffff;
+  color: #aaae0b;
 }
 .alert-info h4 {
-  color: #ffffff;
+  color: #aaae0b;
 }
 .alert-block {
   padding-top: 14px;
@@ -3496,6 +3496,12 @@ input[type="submit"].btn.btn-mini {
 }
 .alert {
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
+}
+.alert,
+.alert-success,
+.alert-error,
+.alert-info {
+  color: #ffffff;
 }
 .nav {
   margin-left: 0;
@@ -3862,6 +3868,9 @@ input[type="submit"].btn.btn-mini {
   -moz-border-radius: 0;
   border-radius: 0;
 }
+.nav {
+  font-size: 12px;
+}
 .nav-header {
   font-size: 14px;
   font-weight: 300;
@@ -3871,6 +3880,13 @@ input[type="submit"].btn.btn-mini {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
+}
+.nav-tabs > li.active > a {
+  border-top: 3px solid #488dc8;
+}
+.nav-tabs > li > a:hover {
+  background: 0 none;
+  border: 0 none;
 }
 .nav-tabs.nav-stacked > li:first-child > a,
 .nav-tabs.nav-stacked > li:last-child > a {
@@ -3884,16 +3900,24 @@ input[type="submit"].btn.btn-mini {
   -moz-border-radius: 0;
   border-radius: 0;
 }
-.tabs-below > .nav-tabs > li > a {
+.tabs-below > .nav-tabs > li.active > a {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
+  border-top: 0 none;
+  border-bottom: 3px solid #488dc8;
 }
 .tabs-left > .nav-tabs > li > a,
 .tabs-right > .nav-tabs > li > a {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
+}
+.tabs-left > .nav-tabs > li.active > a {
+  border-left: 3px solid #488dc8;
+}
+.tabs-right > .nav-tabs > li.active > a {
+  border-left: 3px solid #488dc8;
 }
 .nav-list {
   margin: 0;
@@ -4525,6 +4549,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-inverse .navbar-search .search-query {
   color: #fff;
   background-color: #333;
+  min-height: 30px;
 }
 .navbar-inverse .brand,
 .navbar-inverse .nav > li > a {
@@ -5227,11 +5252,11 @@ a.badge:focus {
 }
 .label-important,
 .badge-important {
-  background-color: #ffffff;
+  background-color: #ae0d11;
 }
 .label-important[href],
 .badge-important[href] {
-  background-color: #e6e6e6;
+  background-color: #7f0a0c;
 }
 .label-warning,
 .badge-warning {
@@ -5243,19 +5268,19 @@ a.badge:focus {
 }
 .label-success,
 .badge-success {
-  background-color: #ffffff;
+  background-color: #62ad25;
 }
 .label-success[href],
 .badge-success[href] {
-  background-color: #e6e6e6;
+  background-color: #4a831c;
 }
 .label-info,
 .badge-info {
-  background-color: #ffffff;
+  background-color: #aaae0b;
 }
 .label-info[href],
 .badge-info[href] {
-  background-color: #e6e6e6;
+  background-color: #7b7e08;
 }
 .label-inverse,
 .badge-inverse {
@@ -5280,6 +5305,81 @@ a.badge:focus {
   -moz-border-radius: 0;
   border-radius: 0;
 }
+.label,
+.badge {
+  background-color: #e9e9e9;
+  color: #505050;
+  text-shadow: 0 -1px 0 rgba(255, 255, 255, 0.5);
+  font-weight: normal;
+}
+.label[href],
+.badge[href] {
+  color: #e6e6e6;
+}
+.label-important,
+.badge-important {
+  background-color: #c2c60c;
+  border-color: #939609;
+}
+.label-important[href],
+.badge-important[href] {
+  background-color: #939609;
+  border-color: #646606;
+}
+.label-warning,
+.badge-warning {
+  background-color: #c60f13;
+  border-color: #970b0e;
+}
+.label-warning[href],
+.badge-warning[href] {
+  background-color: #970b0e;
+  border-color: #67080a;
+}
+.label-success,
+.badge-success {
+  background-color: #6ec229;
+  border-color: #569820;
+}
+.label-success[href],
+.badge-success[href] {
+  background-color: #569820;
+  border-color: #3e6e17;
+}
+.label-info,
+.badge-info {
+  background-color: #c2c60c;
+  border-color: #939609;
+}
+.label-info[href],
+.badge-info[href] {
+  background-color: #939609;
+  border-color: #646606;
+}
+.label-inverse,
+.badge-inverse {
+  background-color: #cccccc;
+  border-color: #b3b3b3;
+  text-shadow: 0 0 1px #fff;
+}
+.label-inverse[href],
+.badge-inverse[href] {
+  background-color: #b3b3b3;
+  border-color: #999999;
+}
+.label-medium {
+  padding: 6px 13px;
+}
+.label-large {
+  padding: 4px 13px;
+  font-weight: normal;
+  font-size: 27px;
+}
+.label-round {
+  -webkit-border-radius: 1000px;
+  -moz-border-radius: 1000px;
+  border-radius: 1000px;
+}
 .ring-badge {
   padding: 0;
   display: inline-block;
@@ -5298,204 +5398,55 @@ a.badge:focus {
   font-weight: bold;
 }
 .ring-badge i {
-  font-size: 32px;
+  font-size: 30px;
   position: absolute;
   width: 40px;
   left: 0;
-  top: 2px;
+  top: -1px;
   line-height: 40px;
 }
 .ring-badge i.offset {
-  width: 32px;
-}
-.label,
-.badge {
-  background-color: #e9e9e9;
-  color: #505050;
-  text-shadow: 0 -1px 0 rgba(255, 255, 255, 0.5);
-  font-weight: normal;
-}
-.label-important,
-.badge-important {
-  background-color: #c2c60c;
-  color: #ffffff;
-  border-color: #939609;
-}
-.label-important[href],
-.badge-important[href] {
-  background-color: #939609;
-  color: #e6e6e6;
-  border-color: #646606;
-}
-.label-warning,
-.badge-warning {
-  background-color: #c60f13;
-  color: #ffffff;
-  border-color: #970b0e;
-}
-.label-warning[href],
-.badge-warning[href] {
-  background-color: #970b0e;
-  color: #e6e6e6;
-  border-color: #67080a;
-}
-.label-success,
-.badge-success {
-  background-color: #6ec229;
-  color: #ffffff;
-  border-color: #569820;
-}
-.label-success[href],
-.badge-success[href] {
-  background-color: #569820;
-  color: #e6e6e6;
-  border-color: #3e6e17;
-}
-.label-info,
-.badge-info {
-  background-color: #c2c60c;
-  color: #ffffff;
-  border-color: #939609;
-}
-.label-info[href],
-.badge-info[href] {
-  background-color: #939609;
-  color: #e6e6e6;
-  border-color: #646606;
-}
-.label-inverse,
-.badge-inverse {
-  background-color: #cccccc;
-  color: #000000;
-  border-color: #b3b3b3;
-  text-shadow: 0 0 1px #fff;
-}
-.label-inverse[href],
-.badge-inverse[href] {
-  background-color: #b3b3b3;
-  color: #000000;
-  border-color: #999999;
-}
-.ring-badge {
-  display: inline-block;
-  padding: 2px 4px;
-  font-size: 11.844px;
-  font-weight: bold;
-  line-height: 14px;
-  color: #ffffff;
-  vertical-align: baseline;
-  white-space: nowrap;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #999999;
-  padding-left: 9px;
-  padding-right: 9px;
-  -webkit-border-radius: 9px;
-  -moz-border-radius: 9px;
-  border-radius: 9px;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-  background-color: #e9e9e9;
-  color: #505050;
-  text-shadow: 0 -1px 0 rgba(255, 255, 255, 0.5);
-  font-weight: normal;
-}
-.ring-badge:empty {
-  display: none;
+  width: 30px;
 }
 .ring-badge-important {
-  background-color: #ffffff;
+  color: #c60f13;
+  border-color: #c60f13;
 }
 .ring-badge-important[href] {
-  background-color: #e6e6e6;
-}
-.ring-badge-warning {
-  background-color: #f09609;
-}
-.ring-badge-warning[href] {
-  background-color: #bf7707;
-}
-.ring-badge-success {
-  background-color: #ffffff;
-}
-.ring-badge-success[href] {
-  background-color: #e6e6e6;
-}
-.ring-badge-info {
-  background-color: #ffffff;
-}
-.ring-badge-info[href] {
-  background-color: #e6e6e6;
-}
-.ring-badge-inverse {
-  background-color: #333333;
-}
-.ring-badge-inverse[href] {
-  background-color: #1a1a1a;
-}
-.ring-badge-important {
-  background-color: #c2c60c;
-  color: #ffffff;
-  border-color: #939609;
-}
-.ring-badge-important[href] {
-  background-color: #939609;
-  color: #e6e6e6;
-  border-color: #646606;
-}
-.ring-badge-warning {
-  background-color: #c60f13;
-  color: #ffffff;
+  color: #970b0e;
   border-color: #970b0e;
 }
+.ring-badge-warning {
+  color: #f09609;
+  border-color: #f09609;
+}
 .ring-badge-warning[href] {
-  background-color: #970b0e;
-  color: #e6e6e6;
-  border-color: #67080a;
+  color: #bf7707;
+  border-color: #bf7707;
 }
 .ring-badge-success {
-  background-color: #6ec229;
-  color: #ffffff;
-  border-color: #569820;
+  color: #6ec229;
+  border-color: #6ec229;
 }
 .ring-badge-success[href] {
-  background-color: #569820;
-  color: #e6e6e6;
-  border-color: #3e6e17;
+  color: #569820;
+  border-color: #569820;
 }
 .ring-badge-info {
-  background-color: #c2c60c;
-  color: #ffffff;
-  border-color: #939609;
+  color: #c2c60c;
+  border-color: #c2c60c;
 }
 .ring-badge-info[href] {
-  background-color: #939609;
-  color: #e6e6e6;
-  border-color: #646606;
+  color: #939609;
+  border-color: #939609;
 }
 .ring-badge-inverse {
-  background-color: #cccccc;
-  color: #000000;
-  border-color: #b3b3b3;
-  text-shadow: 0 0 1px #fff;
+  color: #333333;
+  border-color: #333333;
 }
 .ring-badge-inverse[href] {
-  background-color: #b3b3b3;
-  color: #000000;
-  border-color: #999999;
-}
-.label-medium {
-  padding: 6px 13px;
-}
-.label-large {
-  padding: 4px 13px;
-  font-weight: normal;
-  font-size: 27px;
-}
-.label-round {
-  -webkit-border-radius: 1000px;
-  -moz-border-radius: 1000px;
-  border-radius: 1000px;
+  color: #1a1a1a;
+  border-color: #1a1a1a;
 }
 @-webkit-keyframes progress-bar-stripes {
   from {
@@ -5689,6 +5640,7 @@ a.badge:focus {
 }
 .progress {
   height: 14px;
+  min-height: auto;
 }
 .accordion {
   margin-bottom: 20px;
@@ -7108,8 +7060,4 @@ ul.list-square {
   .footer p {
     margin-bottom: 9px;
   }
-}
-ul,
-ol {
-  margin: 0;
 }
