--- a/less/navs.less
+++ b/less/navs.less
@@ -36,13 +36,13 @@
 	.no-border-radius;
 }
 
-.nav-tabs > li.active > a {
+.nav-tabs > li.active > a, .nav-tabs > li.active:hover > a {
 	border-top: 3px solid #488dc8;
 }
 
 .nav-tabs > li > a:hover {
 	background: 0 none;
-	border: 0 none;
+	border: 1px solid transparent;
 }
 
 .nav-tabs.nav-stacked > li:first-child > a,
