--- a/less/breadcrumbs.less
+++ b/less/breadcrumbs.less
@@ -1,3 +1,14 @@
 .breadcrumb {
   .border-radius(0);
+  border: 1px solid #d4d4d4;
+  font-size: 12px;
+  padding: 6px 10px;
+
+  & > li {
+    margin: 0 0 0 5px;
+
+    & > .divider {
+      padding: 0 0 0 5px;
+    }
+  }
 }
