--- a/less/labels.less
+++ b/less/labels.less
@@ -21,48 +21,58 @@
 
 	// Important (red)
 	&-important { 
+		color: #fff;
 		background-color: @importantBackground;
 		border-color: darken(@importantBackground, 10%); 
 	}
 
 	&-important[href] { 
+		color: #fff;
 		background-color: darken(@importantBackground, 10%);
 		border-color: darken(@importantBackground, 20%); 
 	}
 	// Warnings (orange)
 	&-warning { 
+		color: #fff;
 		background-color: @errorBackground;
 		border-color: darken(@errorBackground, 10%); 
 	}
 	&-warning[href] { 
+		color: #fff;
 		background-color: darken(@errorBackground, 10%);
 		border-color: darken(@errorBackground, 20%); 
 	}
 	// Success (green)
 	&-success { 
+		color: #fff;
 		background-color: @successBackground;
 		border-color: darken(@successBackground, 10%); 
 	}
 	&-success[href] { 
+		color: #fff;
 		background-color: darken(@successBackground, 10%);
 		border-color: darken(@successBackground, 20%); 
 	}
 	// Info (turquoise)
 	&-info { 
+		color: #fff;
 		background-color: @infoBackground;
 		border-color: darken(@infoBackground, 10%); 
 	}
 	&-info[href] { 
+		color: #fff;
 		background-color: darken(@infoBackground, 10%);
 		border-color: darken(@infoBackground, 20%); 
 	}
 	// Inverse (black)
 	&-inverse { 
+		color: #fff;
 		background-color: @inverseBackground;
 		border-color: darken(@inverseBackground, 10%); 
 		text-shadow: 0 0 1px #fff;
 	}
 	&-inverse[href] { 
+		color: #fff;
 		background-color: darken(@inverseBackground, 10%);
 		border-color: darken(@inverseBackground, 20%); 
 	}
