--- a/less/buttons.less
+++ b/less/buttons.less
@@ -25,3 +25,7 @@
 	.no-background-image();
 	.box-shadow(~"0 -2px 0 rgba(0,0,0,0.2) inset,0 0 1px rgba(0,0,0,0.1)");
 }
+
+.input-append .add-on:last-child, .input-append .btn:last-child, .input-append .btn-group:last-child > .dropdown-toggle {
+	.box-shadow(none);
+}
