Fix dropdown menu. Add .btn-xlarge. Add .badge-round.

--- a/less/buttons.less
+++ b/less/buttons.less
@@ -29,3 +29,8 @@
 .input-append .add-on:last-child, .input-append .btn:last-child, .input-append .btn-group:last-child > .dropdown-toggle {
 	.box-shadow(none);
 }
+
+.btn-xlarge {
+	padding: 15px 25px;
+	font-size: 22.5px;
+}
