--- a/less/labels.less
+++ b/less/labels.less
@@ -78,6 +78,10 @@
 	}
 }
 
+.badge-round {
+	.border-radius(1000px);
+}
+
 .label-medium {
 	padding: 6px 13px;
 }
@@ -86,6 +90,7 @@
 	padding: 4px 13px;
 	font-weight: normal;
 	font-size: 27px;
+	line-height: 30px;
 }
 
 .label-round {
