--- a/less/dropdowns.less
+++ b/less/dropdowns.less
@@ -10,3 +10,14 @@
 .dropdown-menu {
   margin: 0;
 }
+
+.dropdown .dropdown-menu .nav-header {
+  padding: 8px 14px;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 18px;
+  background-color: #f7f7f7;
+  border-bottom: 1px solid #ebebeb;
+  margin: -5px 0 5px 0;
+  color: #000;
+}
