Strip shadow from .btn-link

--- a/less/buttons.less
+++ b/less/buttons.less
@@ -26,7 +26,10 @@
 	.box-shadow(~"0 -2px 0 rgba(0,0,0,0.2) inset,0 0 1px rgba(0,0,0,0.1)");
 }
 
-.input-append .add-on:last-child, .input-append .btn:last-child, .input-append .btn-group:last-child > .dropdown-toggle {
+.btn-link,
+.input-append .add-on:last-child, 
+.input-append .btn:last-child, 
+.input-append .btn-group:last-child > .dropdown-toggle {
 	.box-shadow(none);
 }
 
