Moar button improvements

--- a/less/buttons.less
+++ b/less/buttons.less
@@ -27,13 +27,10 @@
 }
 
 .btn-link,
+.btn-mini,
 .input-append .add-on:last-child, 
 .input-append .btn:last-child, 
 .input-append .btn-group:last-child > .dropdown-toggle {
-	.box-shadow(none);
-}
-
-.btn-mini {
 	.box-shadow(none);
 }
 
