Add support for h4 tags in alerts

--- a/less/alerts.less
+++ b/less/alerts.less
@@ -10,6 +10,10 @@
 .alert,
 .alert-success,
 .alert-error,
-.alert-info {
+.alert-info,
+.alert h4,
+.alert-success h4,
+.alert-error h4,
+.alert-info h4 {
 	color: @white;
 }
