Fixes font implementation to use Open Sans for Win+Nix (stepped down a notch)

--- a/less/foundationstrap.less
+++ b/less/foundationstrap.less
@@ -26,6 +26,7 @@
 @import "../bootstrap/less/layouts";
 
 // Base CSS
+@import "fonts";
 @import "../bootstrap/less/type";
 @import "type";
 @import "../bootstrap/less/code";
