--- a/less/type.less
+++ b/less/type.less
@@ -2,9 +2,10 @@
 // Headers/Titles
 // --------------------------------------------------
 
-h1, h2, h3, h4, h5, h6 {
-	font-family: 'Segoe UI', 'Ubuntu', sans-serif;
-	font-weight: 300;
+h6 {
+	text-transform: uppercase;
+	color: @quietColor;
+	font-weight: bold;
 }
 
 //
