--- a/less/variables.less
+++ b/less/variables.less
@@ -44,8 +44,8 @@
 
 // Typography
 // -------------------------
-@sansFontFamily:        "OpenSans", sans-serif;
-@serifFontFamily:       "OpenSans", sans-serif;
+@sansFontFamily:        "Helvetica Neue", Helvetica, Arial, sans-serif;
+@serifFontFamily:       "OpenSans", serif;
 @monoFontFamily:        Menlo, Monaco, Consolas, "Courier New", monospace;
 
 @baseFontSize:          14px;
@@ -53,7 +53,7 @@
 @baseLineHeight:        20px;
 @altFontFamily:         @serifFontFamily;
 
-@headingsFontFamily:    inherit;
+@headingsFontFamily:    @serifFontFamily;
 @headingsFontWeight:    normal; // instead of browser default, bold
 @headingsColor:         inherit; // empty to use BS default, @textColor
 
