Move heading fonts to utility. Update colours to match classic utility.

--- a/less/buttons.less
+++ b/less/buttons.less
@@ -1,6 +1,12 @@
 // Customise buttons
 //
 
+// Core
+.btn {
+	font-family: @btnFont;
+	font-weight: @btnWeight;
+}
+
 .btn,
 .btn-large,
 .btn-small,
