--- a/less/type.less
+++ b/less/type.less
@@ -1,4 +1,12 @@
 //
+// Body text
+// -------------------------
+
+.lead {
+	font-size: @baseFontSize * 1.2;	
+}
+
+//
 // Headers/Titles
 // --------------------------------------------------
 
