--- a/less/foundationstrap.less
+++ b/less/foundationstrap.less
@@ -13,7 +13,8 @@
 
 // Core variables and mixins
 @import "../bootstrap/less/variables";
-@import "variables"; // Modify this for custom colors, font-sizes, etc
+@import "variables";
+@import "../../../stylesheets/less/shared/variables";
 @import "../bootstrap/less/mixins";
 @import "mixins";
 
@@ -26,7 +27,6 @@
 @import "../bootstrap/less/layouts";
 
 // Base CSS
-@import "fonts";
 @import "../bootstrap/less/type";
 @import "type";
 @import "../bootstrap/less/code";
