Minor fix to nav

--- a/less/navs.less
+++ b/less/navs.less
@@ -40,11 +40,15 @@
 	border-top: 3px solid transparent;
 }
 
-.nav-tabs > li.active > a, .nav-tabs > li.active:hover > a {
+.nav-tabs > .active > a, 
+.nav-tabs > .active > a:hover,
+.nav-tabs > .active > a:focus {
 	border-top: 3px solid #488dc8;
 }
 
-.nav-tabs.nav-stacked > li.active > a, .nav-tabs.nav-stacked > li.active:hover > a {
+.nav-tabs.nav-stacked > li.active > a, 
+.nav-tabs.nav-stacked > li.active > a:hover,
+.nav-tabs.nav-stacked > li.active > a:focus {
 	border-top: 1px solid #ddd;
 	border-left: 3px solid #488dc8;
 }
