Fixes rogue underline on focused anchors

--- a/less/type.less
+++ b/less/type.less
@@ -19,4 +19,4 @@ h6 {
 //
 // Link Colors 
 //-----------------------------------------------------------------------------------
-a, a:hover { text-decoration: none; }
+a, a:hover, a:focus { text-decoration: none; }
