--- a/less/modals.less
+++ b/less/modals.less
@@ -1,11 +1,26 @@
 .modal,
 .modal-footer {
-  .border-radius(0);
+	.border-radius(0);
 }
 
 .modal {
 	form { margin-bottom:0; }
+	.modal-header { 
+		background-color: #f4f4f4;
+		border-bottom: 1px solid @borderColor;
+		.box-shadow(inset 0 -1px 0 @white);
+		.close { 
+			margin: 0;
+			padding: 5px;
+			font-weight: normal;
+			font-size: 36px;
+		}
+	}
 	.modal-body {
 		.close { margin-top:-10px; }
+	}
+	.modal-footer {
+		background-color: #f4f4f4;
+		border-top: 1px solid @borderColor;
 	}
 }
